--- a/customer_segments.ipynb
+++ b/customer_segments.ipynb
@@ -434,7 +434,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The three features I noted above as having a positive R^2 score are positively correlated -- detergent/paper, milk, and grocery. The best correlation seems to be between grocery and detergent/paper. As one feature increases, so does the other, and the correlation is tighter in the grocery-detergent plot. The bulk of the data points are closer to the origin in all cases, and the milk-grocery and milk-detergent plots have more outliers."
+    "The three features I noted above as having a positive R^2 score are positively correlated -- detergent/paper, milk, and grocery. The best correlation seems to be between grocery and detergent/paper. As one feature increases, so does the other, and the correlation is tighter in the grocery-detergent plot. The data points skew positively, and the milk-grocery and milk-detergent plots have more outliers."
    ]
   },
   {
@@ -1390,7 +1390,8 @@
     "pca_samples = pca.transform(log_samples)\n",
     "\n",
     "# Generate PCA results plot\n",
-    "pca_results = vs.pca_results(good_data, pca)"
+    "pca_results = vs.pca_results(good_data, pca)\n",
+    "print np.cumsum(pca)"
    ]
   },
   {
@@ -1412,13 +1413,13 @@
     "\n",
     "In the following analysis, I use a weight of about 0.5 as a threshold of significance.\n",
     "\n",
-    "The first dimension is most heavily correlated to decreased spending on detergents/paper. So general spending is increased when detergents/paper are not a significant factor in spending.\n",
+    "The first dimension is most heavily correlated to decreased spending on detergents/paper. So general spending is increased when detergents/paper are not a significant factor in spending. This would be typical of a food service establishment.\n",
     "\n",
-    "The second dimension is most heavily correlated to a combination of decreased spending in fresh, frozen, and deli items. In this new feature, customers with decreased spending in these three areas have increased general spending.\n",
+    "The second dimension is most heavily correlated to a combination of decreased spending in fresh, frozen, and deli items. In this new feature, customers with decreased spending in these three areas have increased general spending. This would be typical of a retail establishment.\n",
     "\n",
-    "The third dimension indicates increased spending on deli and decreased spending on fresh are correlated with increased overall spending.\n",
+    "The third dimension indicates increased spending on deli and decreased spending on fresh are correlated with increased overall spending. This might be typical of a food service establishment.\n",
     "\n",
-    "The fourth dimension correlates increased spending on frozen and decreased spending on deli with general increased overall spending."
+    "The fourth dimension correlates increased spending on frozen and decreased spending on deli with general increased overall spending. This might be typical of a food service establishment."
    ]
   },
   {
@@ -1894,8 +1895,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A customer assigned to a daycare or retailer should identify best with establishments represented by the feature set of Segment 0.\n",
-    "A customer assigned to a cafe or restaurant should identify best with establishments represented by the feature set of Segment 1."
+    "Segment 0: Whereas Detergents_Paper and Grocery are higher than the 75th percentile of all records, Fresh, Frozen, and Delicatessen are well below the mean. A customer assigned to a retailer should identify best with establishments represented by the feature set of Segment 0.\n",
+    "\n",
+    "Segment 1: In this segment, Grocery, Milk, and Detergents_Paper are below the median (and Detergents_Paper is also below the mean), whereas Frozen, Fresh, and Deli are above the median. A customer assigned to a cafe or restaurant should identify best with establishments represented by the feature set of Segment 1."
    ]
   },
   {
